[gd_scene load_steps=7 format=2]

[ext_resource path="res://Levels/ShipSquare.tscn" type="PackedScene" id=1]
[ext_resource path="res://Levels/Chapter I/ch01_links/cc_ss_ch01.tres" type="Resource" id=2]
[ext_resource path="res://Levels/Chapter I/SS_CH01.gd" type="Script" id=3]
[ext_resource path="res://World/Waypoint.tscn" type="PackedScene" id=4]
[ext_resource path="res://Levels/Chapter I/ch01_links/rr_ss_ch01.tres" type="Resource" id=5]
[ext_resource path="res://Levels/Chapter I/ch01_links/cc02_ss_ch01.tres" type="Resource" id=6]

[node name="SS_CH01" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="SideDoorPanel" parent="Doors/ReactorRoomDoor" index="4"]
puzzlePath = "res://Resources/Puzzles/ResistorPuzzleOne.tscn"

[node name="SideDoorPanel" parent="Doors/ArmoryDoor" index="4"]
puzzlePath = "res://Resources/Puzzles/ResistorPuzzleOne.tscn"

[node name="CrewQuartersDoor" parent="Doors" index="2"]
position = Vector2( 103, -218 )

[node name="SideDoorPanel" parent="Doors/CrewQuartersDoor" index="4"]
puzzlePath = "res://Resources/Puzzles/ResistorPuzzleOne.tscn"

[node name="SideDoorPanel" parent="Doors/ResearchLabDoor" index="4"]
puzzlePath = "res://Resources/Puzzles/ResistorPuzzleOne.tscn"

[node name="SideDoorPanel" parent="Doors/WeaponsTechDoor" index="4"]
puzzlePath = "res://Resources/Puzzles/ResistorPuzzleOne.tscn"

[node name="SideDoorPanel" parent="Doors/CommandCenterDoor" index="4"]
interactable = false
puzzlePath = "res://Resources/Puzzles/ResistorPuzzleOne.tscn"
puzzle_solved = true

[node name="DoorPanel" parent="Doors/UpperEngineDoor" index="4"]
puzzlePath = "res://Resources/Puzzles/ResistorPuzzleOne.tscn"

[node name="SideDoorPanel" parent="Doors/LowerEngineDoor" index="4"]
puzzlePath = "res://Resources/Puzzles/ResistorPuzzleOne.tscn"

[node name="CC_Waypoint" parent="." index="2" instance=ExtResource( 4 )]
position = Vector2( 734, 24 )
connection = ExtResource( 2 )
new_level_path = "res://Levels/Chapter I/CC_CH01.tscn"

[node name="CollisionShape2D" parent="CC_Waypoint" index="0"]
position = Vector2( 25, 0 )

[node name="CC02_Waypoint2" parent="." index="3" instance=ExtResource( 4 )]
position = Vector2( 734, 24 )
connection = ExtResource( 6 )
new_level_path = "res://Levels/Chapter I/CC_CH01_02.tscn"

[node name="RR_Waypoint" parent="." index="4" instance=ExtResource( 4 )]
position = Vector2( 27, 24 )
rotation = 3.14159
connection = ExtResource( 5 )
new_level_path = "res://Levels/Chapter I/RR_CH01.tscn"

[node name="CollisionShape2D" parent="RR_Waypoint" index="0"]
position = Vector2( 20, -1.90735e-06 )

[editable path="ShipTileset"]

[editable path="Doors/CommandCenterDoor"]

[editable path="Doors/UpperEngineDoor"]

[editable path="Doors/LowerEngineDoor"]

[editable path="CC_Waypoint"]

[editable path="RR_Waypoint"]
